[gd_scene load_steps=11 format=3 uid="uid://ck88aacg8oi77"]

[ext_resource type="Script" path="res://Scripts/GUI/endless_gameover_ui.gd" id="1_vbghm"]
[ext_resource type="Texture2D" uid="uid://uq6r3is3cq2o" path="res://Assets/UI/Score/GameOverMenu-Endless.png" id="1_w7cxl"]
[ext_resource type="Texture2D" uid="uid://b2tcp8e6quo31" path="res://Assets/UI/GameOver Menu/GameOverMenu-Retry-Button.png" id="2_u066j"]
[ext_resource type="Texture2D" uid="uid://cwkbp364o5gwv" path="res://Assets/UI/GameOver Menu/GameOverMenu-Retry-Button-Pressed.png" id="3_hl30n"]
[ext_resource type="Texture2D" uid="uid://bttdlgjt7uha1" path="res://Assets/UI/GameOver Menu/GameOverMenu-Retry-Button-Hover.png" id="4_08i4h"]
[ext_resource type="Texture2D" uid="uid://lyrxxnqeuunm" path="res://Assets/UI/GameOver Menu/GameOverMenu-GiveUp-Button.png" id="5_vnat1"]
[ext_resource type="Texture2D" uid="uid://bxtslgxruvr7r" path="res://Assets/UI/GameOver Menu/GameOverMenu-GiveUp-Button-Pressed.png" id="6_oct1t"]
[ext_resource type="Texture2D" uid="uid://bjh26wc6jtbeu" path="res://Assets/UI/GameOver Menu/GameOverMenu-GiveUp-Button-Hover.png" id="7_4p17i"]
[ext_resource type="FontFile" uid="uid://bg1oq07gebwu4" path="res://Assets/UI/Fonts/pixeloid-font/PixeloidSansBold-PKnYd.ttf" id="9_eaqfi"]

[sub_resource type="LabelSettings" id="LabelSettings_tmkj4"]
font = ExtResource("9_eaqfi")

[node name="endless_gameover_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbghm")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(11, 11)

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -45.0
offset_right = 80.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w7cxl")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.2857
offset_top = -12.2857
offset_right = 19.7143
offset_bottom = 13.7143
grow_horizontal = 2
grow_vertical = 2

[node name="RetryButton" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../GiveUpButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../GiveUpButton")
focus_next = NodePath("../GiveUpButton")
focus_previous = NodePath("../GiveUpButton")
texture_normal = ExtResource("2_u066j")
texture_pressed = ExtResource("3_hl30n")
texture_hover = ExtResource("4_08i4h")
texture_focused = ExtResource("4_08i4h")

[node name="GiveUpButton" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../RetryButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../RetryButton")
focus_next = NodePath("../RetryButton")
focus_previous = NodePath("../RetryButton")
texture_normal = ExtResource("5_vnat1")
texture_pressed = ExtResource("6_oct1t")
texture_hover = ExtResource("7_4p17i")
texture_focused = ExtResource("7_4p17i")

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 916.0
offset_top = 925.0
offset_right = 956.0
offset_bottom = 948.0
scale = Vector2(2.5, 2.5)
label_settings = SubResource("LabelSettings_tmkj4")

[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GiveUpButton" to="." method="_on_give_up_button_pressed"]
